# TimeGAN

./: preprocessed_normalized_routes_03_new.npz  pyproject.toml  scalers_03_new.pkl  timegan.py  try_timegan.py  utils.py
