[project]
name = "timegan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "argparse>=1.1",
    "matplotlib>=3.1.1",
    "numpy>=1.17.2",
    "pandas>=0.25.1",
    "protobuf==3.20.3",
    "scikit-learn>=0.21.3",
    "tensorflow==1.15.0",
    "tqdm>=4.36.1",
]
